# pavlov

./: .gitignore  .marvin-test  CLAUDE.md  README.md  pyproject.toml  research_doc.md
configs/: __init__.py  config.yaml
configs/data/: avmnist.yaml  cremad.yaml
configs/experiment/: baseline.yaml  cremad.yaml
configs/model/: cremad.yaml  default.yaml
configs/training/: default.yaml
experiments/: EXPERIMENT_PLAN.md
experiments/e1.2_rotation_parameterization/: RESULTS.md
pavlov/: losses.py
pavlov/cli/: demo.py  download_data.py  eval.py  train.py  viz.py
pavlov/data/: __init__.py  avmnist.py  cremad.py  download.py
pavlov/evaluation/: __init__.py  audio_utils.py  cross_modal_transfer.py  missing_modality.py  modality_alignment.py  reconstruction_metrics.py  retrieval.py  rotation_viz.py  sample_logging.py  visualization.py
pavlov/models/: decoders.py  encoders.py  lightning_module.py  pavlov_model.py
pavlov/utils/: checkpoint.py  rotation.py
tests/: test_data.py  test_model.py  test_rotation.py
